# File-Injector---Ethical-Hacking-Project

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
config/: rules.yaml
src/http_download_interceptor/: __init__.py  __main__.py  cli.py  detector.py  http_rewrite.py  interceptor.py  mitm.py  rules.py  tui.py
tests/: conftest.py  test_http_rewrite.py  test_interceptor.py  test_rules.py
